--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dra. Tatiana Scabello Constantino - Psiquiatria</title>
+    <title>Tatiana Scabello Constantino - Psiquiatra</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- ======= HEADER / NAVIGATION ======= -->
+    <!-- Header / Menu -->
     <header>
         <nav>
-            <div class="logo">Dra. Tatiana Scabello</div>
+            <div class="logo">Tatiana Scabello</div>
             <ul class="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#sobre">Sobre mim</a></li>
@@ -21,66 +21,21 @@
         </nav>
     </header>
 
-    <!-- ======= HOME ======= -->
-    <section id="home" class="home">
-        <div class="home-text">
-            <h1>Dra. Tatiana Scabello Constantino</h1>
-            <p>Médica psiquiatra | Medicina endocanabinóide | Psicoterapia psicanalítica</p>
+    <!-- Home -->
+    <section id="home" class="hero">
+        <div class="hero-text">
+            <h1>Drª Tatiana Scabello Constantino</h1>
+            <p>Médica Psiquiatra | Medicina Endocanabinóide | Psicoterapia Psicanalítica</p>
         </div>
-        <div class="home-image">
-            <img src="images/foto-perfil.jpg" alt="Dra. Tatiana Scabello">
+        <div class="hero-image">
+            <!-- Foto institucional -->
+            <img src="images/foto-perfil.jpg" alt="Tatiana Scabello">
         </div>
     </section>
 
-    <!-- ======= SOBRE MIM ======= -->
-    <section id="sobre" class="sobre">
+    <!-- Sobre mim -->
+    <section id="sobre" class="section">
         <h2>Sobre mim</h2>
-        <p>Formada pela Faculdade de Medicina de Ribeirão Preto da USP (FMRP-USP), com residência médica em Psiquiatria no Hospital do Servidor Estadual (IAMSPE). Atuo em São Paulo, principalmente no bairro de Pinheiros, atendendo pacientes de alto padrão.</p>
-        <p>Minha abordagem combina psiquiatria, medicina endocanabinóide e psicoterapia psicanalítica, proporcionando cuidado integral e personalizado.</p>
-        <img src="images/consultorio.jpg" alt="Consultório" class="sobre-img">
-    </section>
-
-    <!-- ======= ÁREAS DE ATUAÇÃO ======= -->
-    <section id="areas" class="areas">
-        <h2>Áreas de atuação</h2>
-        <div class="area-item">
-            <h3>Psiquiatria</h3>
-            <p>Tratamento de diversos transtornos psiquiátricos com abordagem moderna e individualizada.</p>
-        </div>
-        <div class="area-item">
-            <h3>Medicina Endocanabinóide</h3>
-            <p>Uso terapêutico de canabinoides para condições específicas, com acompanhamento seguro e ético.</p>
-        </div>
-        <div class="area-item">
-            <h3>Psicoterapia Psicanalítica</h3>
-            <p>Oferecemos psicoterapia de orientação psicanalítica para autoconhecimento e bem-estar emocional.</p>
-        </div>
-    </section>
-
-    <!-- ======= SERVIÇOS ======= -->
-    <section id="servicos" class="servicos">
-        <h2>Serviços</h2>
-        <ul>
-            <li>Atendimento presencial em consultório</li>
-            <li>Atendimento online por videochamada</li>
-            <li>Consultas individuais e acompanhamento contínuo</li>
-        </ul>
-    </section>
-
-    <!-- ======= CONTATO ======= -->
-    <section id="contato" class="contato">
-        <h2>Contato</h2>
-        <form id="whatsappForm">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" placeholder="Seu nome">
-            <button type="submit">Enviar WhatsApp</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Dra. Tatiana Scabello Constantino. Todos os direitos reservados.</p>
-    </footer>
-
-    <script src="js/script.js"></script>
-</body>
-</html>
+        <div class="sobre-container">
+            <div class="sobre-texto">
+                <p>Sou médica psiquiatra formada pela Faculdade de Medicina de Ribeirão Preto da USP (FMRP-USP), com residência médica em Psiquiatria no Hospital do Servidor Estadual (IAMSPE). Atuo em São Paulo, principalmente no bairro d
